# ptinsight

./: .gitattributes  .gitignore  README.md
app/: Makefile  README.md  ssh.sh
app/analysis/: .gitignore  README.md  pyproject.toml
app/analysis/figures/: figures.ipynb
app/analysis/inputs/: inputs.ipynb
app/analysis/inputs/counts/: 2020-06-02T10-31-46.csv
app/analysis/latency/: Recordings.md  latency.ipynb
app/analysis/latency/recordings/: 2020-07-16T16-40-18.csv  2020-07-17T09-01-20.csv  2020-07-17T13-52-03.csv  2020-07-17T15-24-15.csv  2020-07-21T17-54-09.csv  2020-07-21T18-45-26.csv  2020-07-21T18-56-49.csv  2020-07-22T14-05-43.csv  2020-07-22T14-44-02.csv  2020-07-22T15-26-33.csv  2020-07-22T16-10-46.csv  2020-07-22T17-28-28.csv  2020-07-23T07-18-07.csv  2020-07-23T08-10-17.csv  2020-07-23T08-50-59.csv  2020-07-23T09-35-16.csv  2020-07-23T10-13-55.csv  2020-07-23T12-19-24.csv  2020-07-23T14-19-14.csv  2020-07-23T15-00-50.csv  2020-07-23T15-33-30.csv  2020-07-23T16-06-56.csv  2020-07-23T16-41-55.csv  2020-07-24T08-41-38.csv  2020-07-24T09-18-07.csv  2020-07-24T09-44-25.csv  2020-07-24T10-18-10.csv  2020-07-27T10-25-49.csv  2020-07-27T11-02-10.csv  2020-07-27T11-34-51.csv  2020-07-27T12-07-03.csv  2020-07-27T12-42-29.csv  2020-07-27T14-51-04.csv  2020-07-27T15-27-28.csv  2020-07-27T15-59-57.csv  2020-07-27T17-38-04.csv  2020-07-27T18-12-59.csv  2020-07-27T18-52-11.csv  2020-07-27T19-32-32.csv  2020-07-27T20-39-54.csv  (+51 more)
app/ansible/: ansible.cfg  site.yml
app/common/: Makefile  README.md
app/common/java/: .graphqlconfig  build.gradle  settings.gradle
app/common/protobuf/: generate_java_typeregistry.sh  generate_python_init.sh
app/common/python/: .gitignore  Pipfile  pyproject.toml  setup.py
app/common/python/ptinsight/common/: events.py  geocells.py  hslrealtime.py  latency.py  logger.py  plotting.py  recordings.py  scheduler.py  serialize.py
app/common/python/ptinsight/common/proto/: __init__.py  base_pb2.py
app/common/python/ptinsight/common/proto/egress/: counts_pb2.py  delays_pb2.py  flow_pb2.py
app/common/python/ptinsight/common/proto/ingress/: hsl_realtime_pb2.py
app/docs/: Flink.md  Kafka.md  Latency Recording.md  Latency Tracking.md  Troubleshooting.md
app/docs/images/: figures.drawio
app/ingest/: .gitignore  Pipfile  README.md  pyproject.toml
app/ingest/config/: ingest.default.yaml  ingest.yaml
app/ingest/ptinsight/: event.py  util.py
app/ingest/ptinsight/ingest/: __main__.py  connectors.py  ingestor.py  processors.py
app/ingestion/: .gitignore  README.md  pyproject.toml
app/ingestion/config/: ingestion.default.yaml
app/ingestion/ptinsight/ingestion/: __main__.py  connector.py  ingestor.py  processors.py
app/latencytracker/: .gitignore  README.md  analysis.ipynb  pyproject.toml
app/latencytracker/config/: latencytracker.default.yaml
app/latencytracker/ptinsight/latencytracker/: __main__.py  recorder.py  statistics.py  tracker.py
app/processing/: .gitignore  README.md  build.gradle  settings.gradle
app/terraform/: main.tf  outputs.tf  variables.tf
app/ui/: .gitignore  Pipfile  README.md
app/ui/backend/: .gitignore  Pipfile  pyproject.toml
app/ui/config/: ui.yaml
app/ui/frontend/: package-lock.json  package.json
app/visualization/: README.md
app/visualization/backend/: .gitignore  pyproject.toml
app/visualization/backend/ptinsight/visualization/: __main__.py  server.py  transport.py
app/visualization/frontend/: package-lock.json  package.json  tsconfig.json  webpack.config.js
deploy/: Vagrantfile
litreview/: .gitignore  litreview.bib  litreview.tex
playground/1_vagrant-ansible/: README.md  Vagrantfile  playbook.yaml
playground/2_terraform-ansible/: README.md  deploy_httpd.sh  main.tf  playbook.yaml
playground/3_flink-singlenode/: Makefile  README.md  main.tf  ssh.sh
playground/3_flink-singlenode/ansible/: deploy.sh  site.yml
playground/3_flink-singlenode/application/: .gitignore  build.gradle
playground/3_flink-singlenode/flink-playground/: build.gradle
playground/3_flink-singlenode/lambda/: lambda_function.py  pack.sh
playground/4_cep/: Makefile  README.md  ssh.sh
tools/hsl-client/: .gitignore  Pipfile
tools/mqtt-replay/: .gitignore  Makefile  Pipfile  README.md  analyze.py  record.py  record_and_upload.sh  replay.py  ssh.sh
tools/terraform-inventory/: README.md  terraform_inventory.py
(+223 files in other folders)
