[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "ptinsight-analysis"
version = "1.0"
description = "PT Insight Analysis"
authors = ["Dominik Stiller <dominik.stiller@hpe.com>"]
packages = []

[tool.poetry.dependencies]
python = "^3.8"
ptinsight-common = {path = "../common/python", develop=false}
jupyterlab = "^2.1.5"
seaborn = "^0.10.1"
boto3 = "^1.14.22"
python-dateutil = "^2.8.1"

[tool.poetry.dev-dependencies]
matplotlib = "^3.3.0"
pandas = "^1.0.5"
seaborn = "^0.10.1"
