[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "ptinsight-common"
version = "1.0"
description = "Common functionality for PT Insight Python components"
authors = ["Dominik Stiller <dominik.stiller@hpe.com>"]
packages = [
    { include = "ptinsight" },
]
include = ["ptinsight/common/proto/**/*"]

[tool.poetry.dependencies]
python = "^3.8"
h3 = "^3.6.3"
protobuf = "^3.12.2"
python-dateutil = "^2.8.1"
pandas = "^1.0.5"
boto3 = "^1.14.27"

[tool.poetry.dev-dependencies]
black = ">=19.10b0"
matplotlib = "^3.3.0"
pandas = "^1.0.5"
seaborn = "^0.10.1"

[tool.black]
# https://black.readthedocs.io/en/stable/pyproject_toml.html#configuration-format
# Python regex syntax
exclude = '''
    ptinsight/common/proto/
'''
